DBZ-2870 Using --release instead of --source/--target